# clp

./: .gitmodules  taskfile.yaml
.github/workflows/: clp-core-build-macos.yaml  clp-core-build.yaml
components/clp-package-utils/: pyproject.toml
components/clp-package-utils/clp_package_utils/: controller.py  general.py
components/clp-package-utils/clp_package_utils/scripts/: start_clp.py
components/clp-package-utils/clp_package_utils/scripts/native/: search.py  start_spider_worker.py  utils.py
components/clp-py-utils/clp_py_utils/: clp_config.py  initialize-spider-db.py  profiling_utils.py
components/core/: CMakeLists.txt
components/core/tools/scripts/lib_install/: install-boost.sh
components/job-orchestration/: pyproject.toml
components/job-orchestration/job_orchestration/executor/: start-spider-worker.py
components/job-orchestration/job_orchestration/executor/compress/: celery_compress.py  compress.py  compression_task.py  spider_compress.py
components/job-orchestration/job_orchestration/executor/query/: extract_stream_task.py  fs_search_task.py  spider_reducer_task.py  spider_search_task.py
components/job-orchestration/job_orchestration/scheduler/: scheduler_data.py
components/job-orchestration/job_orchestration/scheduler/compress/: compression_scheduler.py  spider_client.py
components/job-orchestration/job_orchestration/scheduler/compress/task_manager/: celery_task_manager.py
components/job-orchestration/job_orchestration/scheduler/query/: query_scheduler.py  spider_query_scheduler.py
components/spider-orchestration/: .clang-format  CMakeLists.txt
components/spider-orchestration/spider_orchestration/executor/compress/: compression_task.py
components/spider-orchestration/spider_orchestration/scheduler/: constants.py  job_config.py  scheduler_data.py  utils.py
components/spider-orchestration/spider_orchestration/scheduler/compress/: compression_scheduler.py  partition.py
components/spider-orchestration/src/orchestration/: CMakeLists.txt
components/spider-orchestration/src/orchestration/client/: CMakeLists.txt
components/spider-orchestration/src/orchestration/client/compression/: client.cpp
components/spider-orchestration/src/orchestration/tasks/: CMakeLists.txt
components/spider-orchestration/src/orchestration/tasks/compression/: compression.cpp  compression.hpp
components/spider-orchestration/tests/: CMakeLists.txt
taskfiles/: lint.yaml
tools/deployment/package/: docker-compose.base.yaml  docker-compose.spider.base.yaml  docker-compose.yaml
tools/deployment/package-helm/: test.sh  values.yaml
tools/deployment/package-helm/templates/: compression-scheduler-deployment.yaml  compression-worker-deployment.yaml  configmap.yaml  database-secret.yaml  database-statefulset.yaml  db-table-creator-job.yaml  spider-scheduler-deployment.yaml  spider-scheduler-logs-pv.yaml  spider-scheduler-logs-pvc.yaml  spider-scheduler-service.yaml
