[project]
requires-python = ">= 3.9"

[project.scripts]
start-spider-worker = "clp_package_utils.scripts.native.start_spider_worker:main"

[tool.poetry]
name = "clp-package-utils"
version = "0.5.1-dev"
description = "Utilities for the CLP package."
authors = ["YScope Inc. <dev@yscope.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.9"
Brotli = "^1.1.0"
msgpack = "^1.0.7"
pymongo = "^4.7.2"
PyYAML = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

